Update tests and implementation of get a profile by using email as a public endpoint
